fix(oo): fixed scrollbar

--- a/oo/uninadelivery/src/main/resources/style/Graph.css
+++ b/oo/uninadelivery/src/main/resources/style/Graph.css
@@ -27,7 +27,32 @@
   
 }
 
-.scroll-bar:vertical, .scroll-bar:horizontal {
-  -fx-opacity: 0;
-  -fx-width: 0;
+.scroll-bar:vertical {
+  -fx-background-color: transparent;
+}
+
+.scroll-bar:vertical .thumb {
+  -fx-background-color: -fx-secondary-color;
+  -fx-background-insets: 2, 2, 2;
+  -fx-background-radius: 10em;
+}
+
+.scroll-bar:vertical .thumb:hover {
+  -fx-background-color: -fx-primary-color;
+}
+
+.scroll-bar:vertical .thumb:pressed {
+  -fx-background-color: rgb(186, 90, 0);
+}
+
+.scroll-bar .increment-button,
+.scroll-bar .decrement-button {
+    -fx-pref-width: 0;
+    -fx-pref-height: 0;
+    -fx-min-width: 0;
+    -fx-min-height: 0;
+    -fx-max-width: 0;
+    -fx-max-height: 0;
+    -fx-background-color: transparent;
+    -fx-padding: 0;
 }
